--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -25,7 +25,25 @@
   <main>
     <div class="triangle-down"></div>
     <section class="hexagon-container">
-      <div></div>
+      <div class="first-row row">
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 one"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 two"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 three"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 four"></div></div></div>
+      </div>
+      <div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 five"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 six"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 seven"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 eight"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 nine"></div></div></div>
+      </div>  
+      <div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 ten"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 eleven"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 twelve"></div></div></div>
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 thirteen"></div></div></div>
+      </div>
     </section>
     <section class="info">
       <article>
