feat: section ready

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -31,14 +31,14 @@
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 three"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 four"></div></div></div>
       </div>
-      <div>
+      <div class="second-row">
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 five"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 six"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 seven"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 eight"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 nine"></div></div></div>
       </div>  
-      <div>
+      <div class="third-row">
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 ten"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 eleven"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 twelve"></div></div></div>
