add: lines and squares

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -31,6 +31,7 @@
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 three"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 four"></div></div></div>
       </div>
+
       <div class="second-row">
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 five"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 six"></div></div></div>
@@ -43,6 +44,14 @@
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 eleven"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 twelve"></div></div></div>
         <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 thirteen"></div></div></div>
+      </div>
+      <div class="slider">
+        <a class="square" href="#"></a>
+        <a class="square" href="#"></a>
+        <a class="square" href="#"></a>
+        <a class="square" href="#"></a>
+        <a class="square" href="#"></a>
+        <a class="square" href="#"></a>
       </div>
     </section>
     <section class="info">
