--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -56,11 +56,19 @@
     </section>
     <section class="info">
       <article>
-        <img src="" alt="">
+        <div class="hexagon"><div class="hex-layer-1"><div class="hex-layer-2 person"></div></div></div>
         <p class="caption">Smith Anderson</p>
         <p class="subtitle">Illustrator & Character Designer</p>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna. Integer gravida, diam congue molestie fringilla, elit odio rhoncus turpis, ac dictum libero elit vel metus. Morbi egestas sit amet velit eget venenatis. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna</p>
       </article>
+      <div class="social">
+        <div class="sign facebook"></div>
+        <div class="sign twitter"></div>
+        <div class="sign google"></div>
+        <div class="sign pinterest"></div>
+        <div class="sign linkedin"></div>
+        <div class="sign dribbble"></div>
+      </div>
     </section>
   </main>
   <footer>
