feat:task ready

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -62,12 +62,12 @@
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna. Integer gravida, diam congue molestie fringilla, elit odio rhoncus turpis, ac dictum libero elit vel metus. Morbi egestas sit amet velit eget venenatis. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna</p>
       </article>
       <div class="social">
-        <div class="sign facebook"></div>
-        <div class="sign twitter"></div>
-        <div class="sign google"></div>
-        <div class="sign pinterest"></div>
-        <div class="sign linkedin"></div>
-        <div class="sign dribbble"></div>
+        <a href="https://www.facebook.com/" class="sign facebook"></a>
+        <a href="https://twitter.com/?lang=ru" class="sign twitter"></a>
+        <a href="https://myaccount.google.com/intro?hl=ru" class="sign google"></a>
+        <a href="https://www.pinterest.com/" class="sign pinterest"></a>
+        <a href="https://www.linkedin.com/feed/" class="sign linkedin"></a>
+        <a href="https://dribbble.com/" class="sign dribbble"></a>
       </div>
     </section>
   </main>
@@ -75,13 +75,18 @@
     <form action="#" class="form">
       <fieldset>
         <legend>Get In Touch</legend>
-        <input class="input-text" type="text" placeholder="Name (Required)" required>
-        <input type="email" placeholder="Email (Required)" required>
-        <input type="text" placeholder="Subject">
-        <textarea name="" id="" cols="30" rows="10" placeholder="Write your message here..."></textarea>
+        <p class="text-info">In order to get in touch use the contact form below:</p>
+        <input class="input-name" type="text" placeholder="Name (Required)" required>
+        <input class="input-email" type="email" placeholder="Email (Required)" required>
+        <input class="input-subject" type="text" placeholder="Subject">
+        <textarea cols="30" rows="10" placeholder="Write your message here..."></textarea>
         <button class="button-submit" type="submit">send</button>
       </fieldset>  
     </form>
+    <p class="text-info-2">Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae.</p>
+    <div class="position"><div class="position-text">Elm St. 14/05 Lost City</div></div>
+    <div class="phone"><a href="tel:35283318635" class="phone-text">+ 3528 331 86 35</a></div>
+    <div class="mail"><div class="mail-text">info@hexalcorp.com</div></div>
     <div class="bottom">
       <p class="bottom-row">© Copyright 2013 by PSDchat</p>
     </div>
